Move stuff to utxo, separate builder/factory